--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Info Nerd - Soluções em Tecnologia</title>
     <meta name="description" content="A melhor assistência técnica da região. Reparos expressos para notebooks, PCs e celulares com garantia e os melhores técnicos. Peça seu orçamento.">
     
-    <link rel="icon" type="image/png" href="favicon.jpg">
+    <link rel="icon" type="image/png" href="favicon.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -164,5 +164,6 @@
 </body>
 
 </html>
+
 
 
