--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <form class="contato-form animate-on-scroll" action="https://api.staticforms.xyz/submit" method="post">
                         <input type="hidden" name="accessKey" value="sf_jg765mj9i431ibe7416bj1e1">
                         
-                        <<input type="hidden" name="redirectTo" value="/obrigado.html">
+                        <input type="hidden" name="redirectTo" value="obrigado.html">
                         
                         <label for="name" class="sr-only">Nome Completo</label>
                         <input type="text" id="name" name="name" placeholder="Seu nome completo" required>
@@ -163,3 +163,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
