--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
                 <div class="contato-wrapper">
                     <div class="contato-info">
                         <h2 class="section-title animate-on-scroll">Peça seu orçamento. É fácil e rápido.</h2>
-                        <p class="animate-on-scroll">Preencha os dados e nossa equipe entrará em contato via WhatsApp ou e-mail com uma prévia do seu orçamento.</p>
+                        <p class="animate-on-scroll">Preencha os dados e clique em "Enviar Agora" para nos chamar diretamente no WhatsApp com as informações do seu orçamento.</p>
                         <div class="info-item animate-on-scroll">
                             <i class="fab fa-whatsapp"></i>
-                            <a href="https://wa.me/5511918611301" target="_blank" rel="noopener noreferrer">(11) 99999-8888</a>
+                            <a href="https://wa.me/5511918611301" target="_blank" rel="noopener noreferrer">(11) 91861-1301</a>
                         </div>
                         <div class="info-item animate-on-scroll">
                             <i class="fas fa-envelope"></i>
@@ -121,10 +121,7 @@
                             <i class="fas fa-map-marker-alt"></i><span>Rua da Tecnologia, 123 - São Paulo, SP</span>
                         </div>
                     </div>
-                    <form class="contato-form animate-on-scroll" action="https://api.staticforms.xyz/submit" method="post">
-                        <input type="hidden" name="accessKey" value="sf_jg765mj9i431ibe7416bj1e1">
-                        
-                        <input type="hidden" name="redirectTo" value="obrigado.html">
+                    <form class="contato-form animate-on-scroll" id="whatsapp-form">
                         
                         <label for="name" class="sr-only">Nome Completo</label>
                         <input type="text" id="name" name="name" placeholder="Seu nome completo" required>
@@ -163,5 +160,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
