--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
                         </div>
                         <div class="info-item animate-on-scroll">
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:contato@infotech.com.br">contato@infotech.com.br</a>
+                            <a href="mailto:infonerd.assistenciatec@gmail.com
+">cinfonerd.assistenciatec@gmail.com
+</a>
                         </div>
                          <div class="info-item animate-on-scroll">
                             <i class="fas fa-map-marker-alt"></i><span>Rua da Tecnologia, 123 - São Paulo, SP</span>
@@ -160,3 +162,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
