--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="info-item animate-on-scroll">
                             <i class="fas fa-envelope"></i>
                             <a href="mailto:infonerd.assistenciatec@gmail.com
-">cinfonerd.assistenciatec@gmail.com
+">infonerd.assistenciatec@gmail.com
 </a>
                         </div>
                          <div class="info-item animate-on-scroll">
@@ -162,4 +162,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
