--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     </div>
                     <div class="servico-card animate-on-scroll">
                         <i class="fas fa-mobile-screen-button"></i>
-                        <h3>Conserto de Celulares</h3>
-                        <p>Troca de tela e bateria para iPhones, Samsung, Motorola e outras marcas.</p>
+                        <h3>Montagem de Computador</h3>
+                        <p>Montagem de computador para trabalho, estudo e gamer.</p>
                     </div>
                 </div>
             </div>
@@ -161,6 +161,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
