Add 'loja' link to navigation menu
Added a new link to the navigation menu for 'loja'.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <a href="#servicos">Serviços</a>
                 <a href="#diferenciais">Diferenciais</a>
                 <a href="#contato">Orçamento</a>
+                <a href="#loja">loja</a>
             </nav>
             <button class="menu-icon" id="menu-icon" aria-label="Abrir menu de navegação" aria-expanded="false">
                 <i class="fas fa-bars"></i>
@@ -159,6 +160,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
